<resources>
    <string name="app_name">In And Out</string>
    <string name="place_an_order">Place an Order</string>
    <string name="double_double">Double Double</string>
    <string name="cheeseburger">Cheeseburger</string>
    <string name="french_fries">French Fries</string>
    <string name="shakes">Shakes</string>
    <string name="found_drink_options">Fountain Drinks (pick size)</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="order_total">Order Total</string>
    <string name="items_ordered">Items Ordered</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="start_new_order">START NEW ORDER</string>
</resources>
